# aiops-platform

./: .gitignore  AI 智能运维管理平台（AIOps Platform）需求规格说明书.md  README.md  repo.bundle
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260624_init_schema.py
backend/app/: main.py
backend/app/config/: settings.py
backend/app/core/: exceptions.py
backend/app/core/cache/: redis.py
backend/app/core/database/: base.py  event_mixin.py  mixins.py  session.py
backend/app/core/message_queue/: event_bus.py
backend/app/core/middleware/: auth.py  demo_guard.py  permissions.py
backend/app/core/scheduler/: celery_app.py
backend/app/core/storage/: object_storage.py
backend/app/integrations/: base.py  registry.py
backend/app/integrations/itop/: client.py
backend/app/integrations/prometheus/: client.py
backend/app/integrations/signoz/: client.py
backend/app/integrations/zabbix/: client.py
backend/app/modules/module10_eventwall/: api.py  interfaces.py  models.py  repository.py  schemas.py  service.py
backend/app/modules/module11_scheduler/: api.py  models.py  repository.py  service.py
backend/app/modules/module1_asset/: api.py  enrichment.py  interfaces.py  match_service.py  models.py  repository.py  schemas.py  service.py
backend/app/modules/module2_ipam/: api.py  models.py  repository.py  schemas.py  service.py
backend/app/modules/module3_monitoring/: api.py  models.py  repository.py  schemas.py  service.py
backend/app/shared/: constants.py
backend/scripts/: seed_data.py
(+162 files in other folders)
