[project]
name = "aiops-platform"
version = "0.1.0"
description = "AI-Enhanced IT Operations Management Platform"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic[email]>=2.10",
    "pydantic-settings>=2.7",
    "email-validator>=2.1",
    "psycopg2-binary>=2.9",
    "bcrypt>=4.0,<4.2",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "redis>=5.2",
    "celery>=5.4",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.18",
    "netmiko>=4.4",
    "pysnmp-lextudio>=6.2",
    "httpx>=0.28",
    "langchain>=0.3",
    "langchain-community>=0.3",
    "anthropic>=0.49",
    "minio>=7.2",
    "python-dateutil>=2.9",
    "openpyxl>=3.1",
    "tenacity>=9.0",
    "pgvector>=0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "coverage>=7.6",
    "ruff>=0.7",
    "mypy>=1.13",
]

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"
